--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,9 @@ import { MenuLink } from "./MenuLink";
 import { ThemeToggle } from "./ThemeToggle";
 ---
 
-<header class="pt-2 sm:pt-10 px-8 mb-24 pb-12 mx-auto shadow-sm">
+<header
+  class="pt-2 sm:pt-10 px-8 mb-24 pb-12 mx-auto shadow-sm"
+  transition:animate="fade">
   <div
     class="z-10 relative container md:max-w-none mx-auto md:w-full lg:mx-auto h-12 block sm:flex sm:items-center">
     <div class="block relative text-5xl mx-0 font-bold w-full lg:w-1/2">
