--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -73,7 +73,6 @@ const { title, description } = Astro.props as Props;
     <script
       data-goatcounter="https://dylanpaulus.goatcounter.com/count"
       async
-      src="//gc.zgo.at/count.js"
-    ></script>
+      src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
