add link to How to Reduce Your PostgreSQL Database Size

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -88,9 +88,12 @@ import { Content } from "~/src/markdown/about_me.md";
             "JavaScript/TypeScript",
             "CSS",
             "React",
+            "Redux",
+            "Webpack",
+            "AstroJS",
             "Django",
             "ASPCore",
-            "Postgres",
+            "PostgreSQL",
             "Redis",
             "RabbitMQ",
             "Docker",
