add new timescale post & remove mastodon

--- a/src/components/PostListItem.astro
+++ b/src/components/PostListItem.astro
@@ -17,16 +17,33 @@ const dateFormatter = new Intl.DateTimeFormat("en-us", {
 ---
 
 <div class="block mb-14 max-w-max md:max-w-screen-md lg:max-w-screen-lg">
-  <div style={{ color: "var(--font-color)", minHeight: 24 }} class="flex font-medium text-md opacity-75">
-    <span class="flex content-center mr-2">{dateFormatter.format(new Date(data.data.date))}</span>•
+  <div
+    style={{ color: "var(--font-color)", minHeight: 24 }}
+    class="flex font-medium text-md opacity-75">
+    <span class="flex content-center mr-2"
+      >{dateFormatter.format(new Date(data.data.date))}</span
+    >•
     <span class="ml-2">{remarkPluginFrontmatter.timeToRead}</span>
+    {
+      data.data.external && (
+        <>
+          <div class="inline-block mx-2">•</div>
+          <span>External article</span>
+        </>
+      )
+    }
   </div>
 
-  <a href={`/posts/${data.slug}`} title={data.data.title} class="font-bold text-3xl">
+  <a
+    href={`/posts/${data.slug}`}
+    title={data.data.title}
+    class="font-bold text-3xl">
     {data.data.title}
   </a>
 
-  <aside style={{ color: "var(--font-color)" }} class="text-base leading-12 mt-2">
+  <aside
+    style={{ color: "var(--font-color)" }}
+    class="text-base leading-12 mt-2">
     {data.data.description ?? remarkPluginFrontmatter.excerpt}
   </aside>
 </div>
