--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -31,6 +31,9 @@ import { Content } from "~/src/markdown/about_me.md";
       <SubHeading>Experience</SubHeading>
       <ul class="m-0 leading-relaxed">
         <li>
+          Staff Software Engineer @ <a href="https://www.zeal.com/">Zeal</a>
+        </li>
+        <li>
           Senior Software Engineer @ <a href="https://rover.com/">Rover.com</a>
         </li>
         <li>
