--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,9 @@ import Button from "../components/Button.astro";
 
       <p class="mt-6 opacity-80 max-w-2xl break-keep text-lg">
         I have been building highly performant software and engineering teams
-        for close to a decade. Currently, I'm focused on writing code that lets
-        everyone experience the unconditional love of a pet at <a
-          href="https://www.rover.com/"
-          data-goatcounter-click="rover__click"
+        for close to a decade. Currently, I'm at <a
+          href="https://www.zeal.com/"
+          data-goatcounter-click="zeal__click"
           target="_blank"
           ><svg
             height={20}
@@ -31,7 +30,7 @@ import Button from "../components/Button.astro";
               fill="currentColor"
               d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
             ></path>
-          </svg>Rover.com</a
+          </svg>Zeal</a
         >.
       </p>
 
