--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -46,3 +46,10 @@ const cardPath = /posts\/(.+?)/i.exec(Astro.url.pathname)
 <!-- Fonts -->
 <link rel="preconnect" href="https://rsms.me/" />
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+
+<link
+  rel="alternate"
+  type="application/rss+xml"
+  title="Dylan Paulus' Blog"
+  href={`${Astro.site}rss.xml`}
+/>
