--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,6 +23,13 @@ const cardPath = /posts\/(.+?)/i.exec(Astro.url.pathname)
 <meta name="generator" content={Astro.generator} />
 <link rel="canonical" href={canonicalURL} />
 
+<link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Dylan Paulus"
+    href={new URL("rss.xml", Astro.site)}
+/>
+
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
