--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Button from "../components/Button.astro";
 
       <p class="mt-6 opacity-80 max-w-2xl break-keep text-lg">
         I have been building highly performant software and engineering teams
-        for close to a decade. Currently, I'm at <a
+        for close to a decade. Currently, I'm a Staff Software Engineer at <a
           href="https://www.zeal.com/"
           data-goatcounter-click="zeal__click"
           target="_blank"
