fix: goat click tag

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,6 +10,7 @@ const year = new Date().getFullYear();
     <a
       class="hover:scale-110 transform no-underline"
       href="https://github.com/ganderzz"
+      data-goatcounter-click="github__click"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         width="30"
@@ -24,6 +25,7 @@ const year = new Date().getFullYear();
     <a
       class="hover:scale-110 transform no-underline"
       href="https://www.linkedin.com/in/dylanpaulus/"
+      data-goatcounter-click="linkedin__click"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         x="0px"
@@ -37,7 +39,10 @@ const year = new Date().getFullYear();
         ></path>
       </svg></a
     >
-    <a class="hover:scale-110 transform no-underline" href="/rss.xml"
+    <a
+      class="hover:scale-110 transform no-underline"
+      data-goatcounter-click="rss__click"
+      href="/rss.xml"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         width="30"
