--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ export interface Props {
 const { title, description } = Astro.props as Props;
 ---
 
-<html lang="en-US" class="scroll-smooth antialiased">
+<html lang="en-US" class="scroll-smooth antialiased transition-colors">
   <head>
     <BaseHead title={title} description={description} />
 
