--- a/src/components/PostListItem.astro
+++ b/src/components/PostListItem.astro
@@ -16,7 +16,7 @@ const dateFormatter = new Intl.DateTimeFormat("en-us", {
 });
 ---
 
-<div class="block mb-14 max-w-max md:max-w-screen-md lg:max-w-screen-lg">
+<div class="block mb-20 max-w-max md:max-w-screen-md lg:max-w-screen-lg">
   <div
     style={{ color: "var(--font-color)", minHeight: 24 }}
     class="flex font-medium text-md opacity-75">
@@ -25,7 +25,7 @@ const dateFormatter = new Intl.DateTimeFormat("en-us", {
     >•
     <span class="ml-2">{remarkPluginFrontmatter.timeToRead}</span>
     {
-      data.data.external && (
+      data.data.externalLink && (
         <>
           <div class="inline-block mx-2">•</div>
           <span>External article</span>
