--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -87,6 +87,9 @@ import { Content } from "~/src/markdown/about_me.md";
             "CSS",
             "React",
             "Redux",
+            "NextJS",
+            "Remix",
+            "NodeJS",
             "Webpack",
             "AstroJS",
             "Django",
@@ -100,10 +103,15 @@ import { Content } from "~/src/markdown/about_me.md";
             "Istio",
             "Tilt",
             "Azure",
+            "AWS",
             "Git",
             "Jenkins",
+            "Github Actions",
             "Nginx",
             "IIS",
+            "React Native",
+            "Expo",
+            "Fastlane",
           ]}
         />
       </div>
