--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Button from "../components/Button.astro";
 
       <p class="mt-6 opacity-80 max-w-2xl break-keep text-lg">
         I have been building highly performant software and engineering teams
-        for close to a decade. Currently, I'm a Staff Software Engineer at <a
+        for over a decade. Currently, I'm a Staff Software Engineer at <a
           href="https://www.zeal.com/"
           data-goatcounter-click="zeal__click"
           target="_blank"
@@ -34,7 +34,7 @@ import Button from "../components/Button.astro";
         >.
       </p>
 
-      <div class="mt-6"><Button href="/about">Learn more about me</Button></div>
+      <div class="mt-2"><Button href="/about">Learn more about me</Button></div>
     </div>
 
     <div class="max-w-md md:max-w-sm lg:max-w-xl hidden lg:block lg:w-1/2">
