--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -32,17 +32,27 @@ import { Content } from "~/src/markdown/about_me.md";
       <SubHeading>Experience</SubHeading>
       <ul class="m-0 leading-relaxed">
         <li>
+          <Tag>Current</Tag>
+          Staff Fullstack Software Engineer @ <a
+            href="https://www.airgarage.com/">AirGarage</a
+          >
+        </li>
+        <li>
+          <Tag>2024-2025</Tag>
           Staff Software Engineer @ <a href="https://www.zeal.com/">Zeal</a>
         </li>
         <li>
+          <Tag>2022-2024</Tag>
           Senior Software Engineer @ <a href="https://rover.com/">Rover.com</a>
         </li>
         <li>
+          <Tag>2017-2022</Tag>
           Engineering Manager II @ <a href="https://selinc.com/"
             >Schweitzer Engineering Laboratories</a
           >
         </li>
         <li>
+          <Tag>2015-2017</Tag>
           Web developer @ <a
             data-goatcounter-click="moby-games__click"
             href="https://www.mobygames.com/developer/sheet/view/developerId,783203/"
@@ -50,6 +60,7 @@ import { Content } from "~/src/markdown/about_me.md";
           </a>
         </li>
         <li>
+          <Tag>2014-2015</Tag>
           Student web developer @ <a href="https://www.ewu.edu/"
             >Eastern Washington University</a
           >
@@ -68,7 +79,9 @@ import { Content } from "~/src/markdown/about_me.md";
           <li>
             <Tag>2021</Tag> NPM, Dependencies, and JS Modules
           </li>
-          <li><Tag>2019</Tag> Making React Fast</li>
+          <li>
+            <Tag>2019</Tag> Making React Fast
+          </li>
           <li>
             <Tag>2019</Tag> Functional Programming Light (Boise Code Camp)
           </li>
