--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Button from "../components/Button.astro";
         Full-Stack Software Engineer / Engineering Manager
       </p>
 
-      <p class="mt-6 opacity-80 max-w-2xl break-keep text-lg">
+      <p class="mt-6 mb-14 opacity-80 max-w-2xl break-keep text-lg">
         I have been building highly performant software and engineering teams
         for over a decade. Currently, I'm a Staff Fullstack Software Engineer at <a
           href="https://www.airgarage.com/"
@@ -34,7 +34,7 @@ import Button from "../components/Button.astro";
         >.
       </p>
 
-      <div class="mt-2"><Button href="/about">Learn more about me</Button></div>
+      <div><Button href="/about">Learn more about me</Button></div>
     </div>
 
     <div class="max-w-md md:max-w-sm lg:max-w-xl hidden lg:block lg:w-1/2">
