--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,6 +11,7 @@ const year = new Date().getFullYear();
       class="hover:scale-110 transform no-underline"
       href="https://github.com/ganderzz"
       data-goatcounter-click="github__click"
+      aria-label="GitHub"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         width="30"
@@ -26,6 +27,7 @@ const year = new Date().getFullYear();
       class="hover:scale-110 transform no-underline"
       href="https://www.linkedin.com/in/dylanpaulus/"
       data-goatcounter-click="linkedin__click"
+      aria-label="LinkedIn"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         x="0px"
@@ -43,6 +45,7 @@ const year = new Date().getFullYear();
       class="hover:scale-110 transform no-underline"
       data-goatcounter-click="rss__click"
       href="/rss.xml"
+      aria-label="RSS"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         width="30"
