--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import { MenuLink } from "./MenuLink";
 import { ThemeToggle } from "./ThemeToggle";
+import Search from "astro-pagefind/components/Search";
 ---
 
 <header class="header">
