--- a/src/pages/elsewhere.astro
+++ b/src/pages/elsewhere.astro
@@ -102,6 +102,16 @@ import SubHeading from "@components/SubHeading.astro";
           >
         </li>
       </ul>
+
+      <SubHeading>Newline</SubHeading>
+      <ul class="list-disc list-inside leading-relaxed">
+        <li>
+          <a
+            href="https://www.newline.co/courses/creating-react-libraries-from-scratch"
+            >Creating React Libraries from Scratch
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </SiteLayout>
