--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import Button from "../components/Button.astro";
         >.
       </p>
 
-      <div><Button href="/about">Learn more about me</Button></div>
+      <div><Button href="/about">Learn more about me →</Button></div>
     </div>
 
     <div class="max-w-md md:max-w-sm lg:max-w-xl hidden lg:block lg:w-1/2">
@@ -60,7 +60,7 @@ import Button from "../components/Button.astro";
     <Button
       data-goatcounter-click="contact-me__click"
       href="mailto:hey@dylanpaulus.com">
-      Contact me
+      Contact me →
     </Button>
   </div>
 </SiteLayout>
