--- a/src/pages/courses/index.astro
+++ b/src/pages/courses/index.astro
@@ -65,7 +65,7 @@ import Button from "~/src/components/Button.astro";
             fill="currentColor"
             d="M10 6v2H5v11h11v-5h2v6a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h6zm11-3v9l-3.794-3.793l-5.999 6l-1.414-1.414l5.999-6L12 3h9z"
           ></path>
-        </svg>Go to Course
+        </svg>Go to Course →
       </Button>
     </div>
   </div>
