--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -59,6 +59,17 @@ const { page, tags } = Astro.props as {
     </div>
 
     <aside class="sm:flex flex-col w-1/3 md:px-8 hidden">
+      <div id="search"></div>
+      <script is:inline>
+        window.addEventListener("DOMContentLoaded", () => {
+          new PagefindUI({
+            element: "#search",
+            pageSize: 6,
+            showImages: false,
+          });
+        });
+      </script>
+
       <a class="block w-fit" href="/sitemap">
         <SubHeading>Popular Tags</SubHeading>
       </a>
