--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -127,6 +127,9 @@ import { Content } from "~/src/markdown/about_me.md";
             "React Native",
             "Expo",
             "Fastlane",
+            "Vite",
+            "Playwright",
+            "...and more!",
           ]}
         />
       </div>
