--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -219,6 +219,10 @@ ol li::marker {
   grid-column: 2;
 }
 
+.blog__post img {
+    border-radius: 1rem;
+}
+
 .blog__post table {
   border-radius: 5px;
   margin: 1.5rem 0;
