--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -39,6 +39,13 @@ import { Content } from "~/src/markdown/about_me.md";
           >
         </li>
         <li>
+          <Tag>Current</Tag>
+          Technical Cofounder @ <a
+            href="https://www.linkedin.com/company/unicorncatconsulting"
+            >UnicornCat Consulting</a
+          >
+        </li>
+        <li>
           <Tag>2024-2025</Tag>
           Staff Software Engineer @ <a href="https://www.zeal.com/">Zeal</a>
         </li>
