--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,8 @@ import Button from "../components/Button.astro";
 
       <p class="mt-6 mb-14 opacity-80 max-w-2xl break-keep text-lg">
         I have been building highly performant software and engineering teams
-        for over a decade. Currently, I'm a Staff Fullstack Software Engineer at <a
+        for over a decade. Currently, I'm bringing real estage online as a Staff
+        Fullstack Software Engineer at <a
           href="https://www.airgarage.com/"
           data-goatcounter-click="airgarage__click"
           target="_blank"
