--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -7,7 +7,7 @@ export async function getStaticPaths() {
   const posts = await getCollection("post");
 
   return posts.map((post) => ({
-    params: { slug: post.slug },
+    params: { slug: post.slug.split("/")[1] },
     props: { post },
   }));
 }
